# GRUPPE07_Arafa_El-Harery

./: .gitignore  README.md
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  _setup_util.py  local_setup.sh  setup.sh
devel/.private/igus_description/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  igus_description.pc
logs/catkin_tools_prebuild/: build.symlink.001.log.stderr
src/igus_description/: CMakeLists.txt
src/robot_station/: CMakeLists.txt  package.xml
src/robot_station_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/robot_station_moveit/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  robot_station.srdf  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
src/robot_station_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
src/robot_station_moveit/scripts/: demo.py  demo_robot.py  frames.gv
(+45 files in other folders)
